--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "resumecls.doc.tar.xz": f5f1559d64e825f58a9331cd1255c75dcfa14ba8
-  "resumecls.source.tar.xz": 547f20ef07446ab9cf6f68811899a9ab2f991074
-  "resumecls.tar.xz": 71eb16abe8d355d3e82d9ebd6803d590912c996f
+  resumecls.doc.tar.xz: 2cafd52e2bc927b0bcc13eef05978e6fba516b6d
+  resumecls.source.tar.xz: 01557eb26c35985167c42e09465296d28a64e9d2
+  resumecls.tar.xz: a629792ec987844592fa73aca87c23c46e3703a2
